bh.com: fix iframe size on IE9

--- a/gameclient/index_body_bh.css
+++ b/gameclient/index_body_bh.css
@@ -1,3 +1,5 @@
+html, body { height: 100%; } /* for IE9 iframe sizing */
+
 @keyframes startup_div_text_motion {
     0% { transform: matrix(0.9, 0, 0, 0.9, 0, 20.0); }
     100% {transform: matrix(1.3, 0, 0, 1.3, 0, 0); }
